[tool.poetry]
name = "image-collector"
version = "0.1.0"
description = ""
authors = ["Mckupe <nohrin09072001@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pillow = "^10.1.0"
config-py = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
